@@ -30,6 +30,7 @@ Bugs fixed:
 - 1548673 Fixed invalid memory access
 - 1519600 Fixed caching/compressing class provider
 - 1549330 Group providers of a provider module in one process
+- 1562801 Fixed segfault on provider process limit 
 
 Changes in 1.1.0
 ================
